# OperatorWritingTestFramework

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  debug.sh  debug_build.sh  format.sh  ncu_build.sh  ncu_report.sh  run.sh  test_op_name.sh
configs/: benchmark_plan.yaml
include/: op_registry.hpp  op_runtime.hpp  utils.cuh
scripts/: run_benchmarks.py  run_op.py  select_build_targets.py
src/framework/: op_runtime.cpp
src/gemm/: gemm_demo1.cu  gemm_demo4.cu  gemm_demo5.cu  gemm_demo6.cu  gemm_demo7.cu  gemm_demo8.cu
src/gemm/A100/: A100_gemm_demo8_128x128x8_tile.cu
src/gemm/frame/: frame_gemm_demo2.cu  frame_gemm_demo4.cu  frame_gemm_demo5.cu  frame_gemm_demo6.cu  frame_gemm_demo7.cu
src/gemm/frame_idx/: frame_gemm_demo1.cu  frame_gemm_demo2.cu  frame_gemm_demo3.cu  frame_gemm_demo4.cu  frame_gemm_demo5.cu  frame_gemm_demo6.cu  frame_gemm_demo7.cu  frame_gemm_demo8.cu  frame_gemm_demo8_128x128x8_idx.cu  frame_gemm_demo8_128x128x8_tile.cu  frame_gemm_demo8_128x128x8_tile_thread4val.cu  frame_gemm_demo8_128x128x8_tile_thread4val_cp_async.cu  frame_gemm_demo8_128x128x8_tile_thread4val_swizzle.cu  frame_gemm_demo8_16x16x16_idx.cu  frame_gemm_demo8_16x16x16_tile.cu
src/gemm/hand/: gemm_demo2.cu  gemm_demo3.cu
src/gemm/hand_idx/: gemm_demo1.cu  gemm_demo2.cu  gemm_demo3.cu
src/hand_gemm/: gemm_demo1.cu  gemm_demo2.cu  gemm_demo3.cu
src/norm/: layer_norm_demo1.cu  rms_norm_demo1.cu
src/ops/: cublas_gemm_f32.cu  cutlass_gemm_op.cu  vector_add_op.cu
src/reduce/: reduce_demo3.cu  reduce_demo6.cu  reduce_demo7.cu  reduce_demo8.cu
src/softmax/: softmax.cu  softmax_grid_sync.cu
src/topk/: topk_demo1.cu
src/transpose/: transpose_demo1.cu  transpose_demo2.cu  transpose_demo3.cu
tests/: op_runner.cpp  test_all_ops.cu
tool/: gpu_props.cu
